# monster-pomodoro-mac

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRIEF.md  DESIGN.md  LICENSE  README.md  SECURITY.md
iterations/v1-launch/: CONTENT.md  PRD.md
iterations/v1-launch/.plan/: plan.md
iterations/v1-launch/.plan/phases/: 01-scaffold-spikes.md  02-timer-core.md  03-main-panel.md  04-break-intervention.md  05-stats-settings.md  06-data-channels.md  07-system-polish.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  store.rs  timer.rs
src/celebration/: celebration.html  celebration.js
src/panel/: panel.css  panel.html  panel.js
src/shared/: theme.css  util.js
src/stats/: notion.js  stats.css  stats.html  stats.js
